@@ -1844,3 +1844,10 @@ Thu Jan 20 17:41:00 CST 2000
 Added a config popup that lets you toggle between a flat rotating colored square and a rotating 3d purple cube. Anyone ahve any suggestions for any
 E textures i could slap on the sides?
 
+-------------------------------------------------------------------------------
+
+Sun Jan 23 17:30:27 CST 2000
+(thebard)
+
+Added saving for configurations. Also started to add lighting. As you can see, its going horribly wrong right now. I'll fix it as soon as i can.
+
